...
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inpPlanet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:hint="@string/inputan" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCari"
            android:layout_width="150dp"
            android:layout_height="55dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/amaranth"
            android:gravity="center"
            android:text="@string/cari"
...
