<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_hapus"
        android:icon="@drawable/baseline_delete_forever_24"
        android:title="@string/hapus_histori"
        app:showAsAction="ifRoom" />
</menu>
