<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_about"
        android:title="@string/tentang_aplikasi"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_histori"
        android:icon="@drawable/ic_baseline_history_13"
        android:title="@string/histori"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_list"
        android:icon="@drawable/ic_linear_layout"
        android:title="@string/app_name"
        app:showAsAction="ifRoom"/>
</menu>