...
    <string name="infor_ursamayor">Ursa Mayor sering dikenal oleh nusantara karena terlihat sebagai tujuh bintang terang yang berguna bagi kapal dan juga perahu sebagai patokan saat berlayar di malam hari</string>
    <string name="infor_orionid">Orionid ini diambil dari tempat bercahaya sebagai titik meteor yang disebut dengan konstelasi orion</string>
    <string name="infor_perseid">Meteor Perseid ini dapat kita lihat dengan jelas pada belahan bumi bagian utara ketika malam hari di musim panas pada saat itu lagit terlihat cerah</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="belum_ada_data">Belum Ada Data</string>
    <string name="konfirmasi_hapus">Anda yakin ingin menghapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="histori">Histori Pencarian</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="input_combine">Inputan tidak bisa kombinasi Angka dan Karakter!</string>
    <string name="aboutapk">UniverseThings merupakan sebuah aplikasi Android untuk memberikan informasi terkait Planet, Galaxy, dan Meteor.\n\nAplikasi ini dibuat untuk kelas Mobpro 1. Temukan kodenya di https://github.com/wulanmaulidya/universeThings\n\nCopyright © 2023 Wulan Maulidya.\nAll rights reserved.</string>
    <string name="share">Bagikan Aplikasi</string>
...
